--- a/notebook/chiffres daffaire.ipynb
+++ b/notebook/chiffres daffaire.ipynb
@@ -89,12 +89,22 @@
    "outputs": [],
    "source": [
     "limit_date = datetime.now().replace(year=datetime.now().year - 1)\n",
-    "chiffredaffaire_top_year = chiffredaffaire[chiffredaffaire.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
-    "chiffredaffaire_top_year.columns = chiffredaffaire_top_year.columns.droplevel(0)\n",
-    "chiffredaffaire_top_year = chiffredaffaire_top_year.groupby('date').sum()\n",
-    "chiffredaffaire_top_year['total'] = pd.DataFrame(chiffredaffaire_top_year.stack('category'), columns=['total']).groupby('date').sum()\n",
-    "chiffredaffaire_top_year = chiffredaffaire_top_year.sort_values(by='total', ascending=False)\n",
+    "chiffredaffaire_year = chiffredaffaire[chiffredaffaire.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
+    "chiffredaffaire_year.columns = chiffredaffaire_year.columns.droplevel(0)\n",
+    "chiffredaffaire_year = chiffredaffaire_year.groupby('date').sum()\n",
+    "chiffredaffaire_year['total'] = pd.DataFrame(chiffredaffaire_year.stack('category'), columns=['total']).groupby('date').sum()\n",
+    "chiffredaffaire_top_year = chiffredaffaire_year.sort_values(by='total', ascending=False)\n",
     "chiffredaffaire_top_year[['total']].head(20)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "134c4b65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chiffredaffaire_year['total'].plot(kind='bar')"
    ]
   },
   {
@@ -112,20 +122,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5898561",
+   "id": "8c53ce99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "marges = {2017:0.46,\n",
+    "          2018:0.4795,\n",
+    "          2019:0.5012,\n",
+    "          2020:0.3679,\n",
+    "          2021:0.5078,\n",
+    "          2022:0.3363,\n",
+    "          2023:0.45}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc246770",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "charges = {2017:50353,\n",
+    "           2018:50353,\n",
+    "           2019:50786,\n",
+    "           2020:45973-33171,\n",
+    "           2021:30298-40000,\n",
+    "           2022:45886,\n",
+    "           2023:45886\n",
+    "          }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5496afd9",
    "metadata": {},
    "outputs": [],
    "source": [
     "benefices = chiffredaffaire.stack('category')[['price']].groupby('date').sum().resample('MS').sum()\n",
     "benefices['year'] = benefices.index.year\n",
-    "marge = {2017:0.5,2018:0.5,2019:0.5,2020:0.35,2021:0.35,2022:0.35,2023:0.45}\n",
-    "benefices['marge'] = benefices['year'].map(marge)\n",
-    "benefices['charges_fixes'] = 4000\n",
+    "benefices['marge'] = benefices['year'].map(marges)\n",
+    "benefices['charges_fixes'] = benefices['year'].map(charges)/12\n",
     "benefices = benefices.groupby(['date','year']).sum()\n",
-    "benefices['total'] = benefices['price'] * benefices['marge'] - benefices['charges_fixes']\n",
+    "benefices['taux_ht'] = 0.8333\n",
+    "benefices['total'] = benefices['price'] * benefices['marge'] * benefices['taux_ht'] - benefices['charges_fixes']\n",
     "del benefices['price']\n",
     "del benefices['marge']\n",
     "del benefices['charges_fixes']\n",
+    "del benefices['taux_ht']\n",
     "benefices = benefices.unstack('year').fillna(0)\n",
     "benefices.columns = benefices.columns.droplevel(0)\n",
     "benefices.plot(kind='bar')"
@@ -134,20 +178,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a16ca4b",
+   "id": "d9599e02",
    "metadata": {},
    "outputs": [],
    "source": [
     "benefices.sum()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c53ce99",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
