Débute la préparation de la génération automatique du résultat des notebooks

--- a/notebook/adhesions.ipynb
+++ b/notebook/adhesions.ipynb
@@ -9,11 +9,14 @@
    "source": [
     "import pandas as pd\n",
     "from datetime import datetime\n",
+    "import mydashtools as dt\n",
+    "import plotly.express as px\n",
     "pd.options.plotting.backend = \"plotly\"\n",
     "\n",
     "zelty = pd.read_csv(\"../zelty/zelty.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
     "zelty['date'] = pd.to_datetime(zelty['date'])\n",
-    "zelty.head()"
+    "if dt.is_notebook():\n",
+    "    print(zelty.head())"
    ]
   },
   {
@@ -33,10 +36,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date = datetime.now().replace(month=datetime.now().month - 2)\n",
+    "limit_date = datetime.now().replace(month=datetime.now().month - 1)\n",
     "adhésions_last_month = adhésions[adhésions.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
     "adhésions_last_month = adhésions_last_month.resample('D').sum().rename(columns={'price': 'nb'})\n",
-    "adhésions_last_month.plot(kind=\"bar\")"
+    "\n",
+    "fig = px.bar(adhésions_last_month)\n",
+    "dt.fig_save_or_show(fig, 'adhesions_01_adhesion_des_derniers_jours')"
    ]
   },
   {
@@ -49,7 +54,8 @@
     "limit_date = datetime.now().replace(year=datetime.now().year - 1)\n",
     "adhésions_top_year = adhésions[adhésions.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
     "adhésions_top_year = adhésions_top_year.resample('D').sum().rename(columns={'price': 'nb'})\n",
-    "adhésions_top_year.sort_values(by='nb', ascending=False).head(20)"
+    "if dt.is_notebook():\n",
+    "    print(adhésions_top_year.sort_values(by='nb', ascending=False).head(20))"
    ]
   },
   {
@@ -63,7 +69,9 @@
     "adhésions_by_month['year'] = adhésions_by_month.index.year\n",
     "adhésions_by_month = adhésions_by_month.groupby(['date','year']).sum().unstack('year').fillna(0)\n",
     "adhésions_by_month.columns = adhésions_by_month.columns.droplevel(0)\n",
-    "adhésions_by_month.plot(kind='bar')\n"
+    "\n",
+    "fig = px.bar(adhésions_by_month)\n",
+    "dt.fig_save_or_show(fig, 'adhesions_02_adhesion_par_mois')"
    ]
   },
   {
@@ -98,7 +106,9 @@
     "adhésions_by_year.fillna(0, inplace=True)\n",
     "adhésions_by_year['toute l\\'année'] = adhésions_by_year['nb'] - adhésions_by_year[libelle_a_date]\n",
     "del adhésions_by_year['nb']\n",
-    "adhésions_by_year.plot(kind=\"bar\")\n"
+    "\n",
+    "fig = px.bar(adhésions_by_year)\n",
+    "dt.fig_save_or_show(fig, 'adhesions_03_adhesion_par_an')"
    ]
   },
   {
