--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -9,17 +9,20 @@
    "source": [
     "import pandas as pd\n",
     "from datetime import datetime\n",
+    "import mydashtools as dt\n",
+    "import plotly.express as px\n",
     "pd.options.plotting.backend = \"plotly\"\n",
     "\n",
     "services_baristas = pd.read_csv(\"../calendar/baristas.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
     "services_baristas['mois'] = pd.to_datetime(services_baristas['mois'])\n",
-    "services_baristas.head()"
+    "if dt.is_notebook():\n",
+    "    print(services_baristas.head())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b83b7fd6",
+   "id": "08b4cee8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +30,9 @@
     "creneaux_annules['year'] = creneaux_annules.index.year\n",
     "creneaux_annules = creneaux_annules.reset_index().set_index(['mois', 'year']).unstack('year').fillna(0)\n",
     "creneaux_annules.columns = creneaux_annules.columns.droplevel(0)\n",
-    "creneaux_annules.plot(kind='bar')"
+    "\n",
+    "fig = px.bar(creneaux_annules)\n",
+    "dt.fig_save_or_show(fig, 'barista_01_creneaux_annules')"
    ]
   },
   {
@@ -48,31 +53,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ae0284a",
+   "id": "0cc333b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_baristas[['nb baristas']].stack('year').groupby('year').sum().plot(kind='bar')"
+    "fig = px.bar(nb_baristas[['nb baristas']].stack('year').groupby('year').sum())\n",
+    "dt.fig_save_or_show(fig, 'barista_02_nb_baristas_par_an')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48856823",
+   "id": "e9e35d80",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_baristas[['nb services réalisés']].stack('year').groupby('year').sum().plot(kind='bar')"
+    "fig = px.bar(nb_baristas[['nb services réalisés']].stack('year').groupby('year').sum())\n",
+    "dt.fig_save_or_show(fig, 'barista_03_nb_services_realises_par_an')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5002c57d",
+   "id": "c868dc53",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_baristas['nb baristas'].plot(kind='bar')"
+    "fig = px.bar(nb_baristas['nb baristas'])\n",
+    "dt.fig_save_or_show(fig, 'barista_04_nb_baristas_par_mois')"
    ]
   },
   {
@@ -82,13 +90,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_baristas['nb services réalisés'].plot(kind='bar')"
+    "fig = px.bar(nb_baristas['nb services réalisés'])\n",
+    "dt.fig_save_or_show(fig, 'barista_05_nb_services_réalisés_par_mois')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1544e2ac",
+   "id": "de9677ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,27 +112,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d62ad03b",
+   "id": "822e94e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "services['count'].plot(kind='bar')"
+    "fig = px.bar(services['count'])\n",
+    "dt.fig_save_or_show(fig, 'barista_06_nb_referents_par_mois')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad1fe9af",
+   "id": "a6d498d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "services['sum'].plot(kind='bar')"
+    "fig = px.bar(services['sum'])\n",
+    "dt.fig_save_or_show(fig, 'barista_07_nb_services_ouverts')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78b35bd5",
+   "id": "fe1c4ca1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,94 +145,47 @@
     "baristas.sort_values(by='nb', ascending=False, inplace=True)\n",
     "baristas['nom'] = baristas.index.map(baristas_t2n['nom'])\n",
     "baristas = baristas.reset_index()[['nom', 'nb']].groupby('nom')[['nb']].sum().sort_values(by='nb', ascending=False)\n",
-    "baristas.plot()"
+    "\n",
+    "fig = px.bar(baristas)\n",
+    "dt.fig_save_or_show(fig, 'barista_08_nb_services_par_baristas_12_mois')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08b479ee",
+   "id": "74fc94f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "baristas.head(30)"
+    "if dt.is_notebook():\n",
+    "    print(baristas.head(30))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db1321e8",
+   "id": "d0e36de3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(baristas[baristas[['nb']] < 2].dropna().reset_index()['nom'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6dbf8f68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(baristas[baristas[['nb']] > 20].dropna().reset_index()['nom'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9331d3d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(baristas[baristas[['nb']] > 40].dropna().reset_index()['nom'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4cb37de7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(baristas[baristas[['nb']] > 60].dropna().reset_index()['nom'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e68a6512",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(baristas.dropna().reset_index()['nom'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed9cbf0a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "res={\n",
+    "    'un_seul_service': len(baristas[baristas[['nb']] < 2].dropna().reset_index()['nom'].unique()),\n",
+    "    'plus_de_20_services': len(baristas[baristas[['nb']] > 20].dropna().reset_index()['nom'].unique()),\n",
+    "    'plus_de_40_services': len(baristas[baristas[['nb']] > 40].dropna().reset_index()['nom'].unique()),\n",
+    "    'plus_de_60_services': len(baristas[baristas[['nb']] > 60].dropna().reset_index()['nom'].unique()),\n",
+    "    'nb_baristas': len(baristas.dropna().reset_index()['nom'].unique()),\n",
+    "    'moyenne_du_nb_de_services': baristas['nb'].mean()\n",
+    "}\n",
     "barista_std = baristas.reset_index()\n",
-    "barista_std[barista_std.index == len(barista_std)/2].reset_index()['nb'][0]"
+    "res['ecart_type_du_nb_de_services'] = barista_std[barista_std.index == len(barista_std)/2].reset_index()['nb'][0]\n",
+    "if dt.is_notebook():\n",
+    "    print(res)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c15bdcd9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "baristas['nb'].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7177d71b",
+   "id": "74e1112e",
    "metadata": {},
    "outputs": [],
    "source": []
