--- a/notebook/chiffresdaffaire.ipynb
+++ b/notebook/chiffresdaffaire.ipynb
@@ -9,11 +9,14 @@
    "source": [
     "import pandas as pd\n",
     "from datetime import datetime\n",
+    "import mydashtools as dt\n",
+    "import plotly.express as px\n",
     "pd.options.plotting.backend = \"plotly\"\n",
     "\n",
     "zelty = pd.read_csv(\"../zelty/zelty.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
     "zelty['date'] = pd.to_datetime(zelty['date'])\n",
-    "zelty.head()"
+    "if dt.is_notebook():\n",
+    "    print(zelty.head())"
    ]
   },
   {
@@ -40,7 +43,9 @@
     "# = chiffredaffaire.columns.droplevel(0)\n",
     "chiffredaffaire_par_an.columns = chiffredaffaire_par_an.columns.droplevel(0)\n",
     "del chiffredaffaire_par_an['']\n",
-    "chiffredaffaire_par_an.plot(kind=\"bar\")"
+    "\n",
+    "fig = px.bar(chiffredaffaire_par_an)\n",
+    "dt.fig_save_or_show(fig, 'chiffresdaffaire_01_ca_par_categories_et_an')"
    ]
   },
   {
@@ -53,7 +58,9 @@
     "chiffredaffaire_12_mois = chiffredaffaire.resample('MS').sum()\n",
     "chiffredaffaire_12_mois = chiffredaffaire_12_mois[chiffredaffaire_12_mois.index > str(datetime.now().replace(year=datetime.now().year - 1))]\n",
     "chiffredaffaire_12_mois.columns = chiffredaffaire_12_mois.columns.droplevel(0)\n",
-    "chiffredaffaire_12_mois.plot(kind='bar')"
+    "\n",
+    "fig = px.bar(chiffredaffaire_12_mois)\n",
+    "dt.fig_save_or_show(fig, 'chiffresdaffaire_02_ca_par_categories_12_mois')"
    ]
   },
   {
@@ -78,7 +85,9 @@
     "chiffredaffaire_total_by_year.fillna(0, inplace=True)\n",
     "chiffredaffaire_total_by_year['toute l\\'année'] = chiffredaffaire_total_by_year['price'] - chiffredaffaire_total_by_year[libelle_a_date]\n",
     "del chiffredaffaire_total_by_year['price']\n",
-    "chiffredaffaire_total_by_year.plot(kind=\"bar\")\n"
+    "\n",
+    "fig = px.bar(chiffredaffaire_total_by_year)\n",
+    "dt.fig_save_or_show(fig, 'chiffresdaffaire_03_ca_total_par_an')"
    ]
   },
   {
@@ -94,7 +103,9 @@
     "chiffredaffaire_year = chiffredaffaire_year.groupby('date').sum()\n",
     "chiffredaffaire_year['total'] = pd.DataFrame(chiffredaffaire_year.stack('category'), columns=['total']).groupby('date').sum()\n",
     "chiffredaffaire_top_year = chiffredaffaire_year.sort_values(by='total', ascending=False)\n",
-    "chiffredaffaire_top_year[['total']].head(20)\n"
+    "\n",
+    "if dt.is_notebook():\n",
+    "    print(chiffredaffaire_top_year[['total']].head(20))\n"
    ]
   },
   {
@@ -104,7 +115,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chiffredaffaire_year['total'].plot(kind='bar')"
+    "fig = px.bar(chiffredaffaire_year['total'])\n",
+    "dt.fig_save_or_show(fig, 'chiffresdaffaire_04_ca_quotidien_12_mois')"
    ]
   },
   {
@@ -116,7 +128,9 @@
    "source": [
     "del chiffredaffaire_top_year['total']\n",
     "chiffredaffaire_top_year.index = chiffredaffaire_top_year.index.strftime('%d/%m/%Y')\n",
-    "chiffredaffaire_top_year.head(50).plot(kind='bar')"
+    "\n",
+    "fig = px.bar(chiffredaffaire_top_year.head(50))\n",
+    "dt.fig_save_or_show(fig, 'chiffresdaffaire_05_ca_quotidien_top50_12_mois')"
    ]
   },
   {
@@ -172,7 +186,9 @@
     "del benefices['taux_ht']\n",
     "benefices = benefices.unstack('year').fillna(0)\n",
     "benefices.columns = benefices.columns.droplevel(0)\n",
-    "benefices.plot(kind='bar')"
+    "\n",
+    "fig = px.bar(benefices)\n",
+    "dt.fig_save_or_show(fig, 'chiffresdaffaire_06_benefice')"
    ]
   },
   {
@@ -182,8 +198,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "benefices.sum()"
+    "if dt.is_notebook():\n",
+    "    print(benefices.sum())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "761a11fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
