Génération des graphiques en HTML

--- a/notebook/adhesions.ipynb
+++ b/notebook/adhesions.ipynb
@@ -8,12 +8,13 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
     "from datetime import datetime\n",
     "import mydashtools as dt\n",
     "import plotly.express as px\n",
     "pd.options.plotting.backend = \"plotly\"\n",
     "\n",
-    "zelty = pd.read_csv(\"../zelty/zelty.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
+    "zelty = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../zelty/zelty.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
     "zelty['date'] = pd.to_datetime(zelty['date'])\n",
     "if dt.is_notebook():\n",
     "    print(zelty.head())"
