--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -8,12 +8,13 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
     "from datetime import datetime\n",
     "import mydashtools as dt\n",
     "import plotly.express as px\n",
     "pd.options.plotting.backend = \"plotly\"\n",
     "\n",
-    "services_baristas = pd.read_csv(\"../calendar/baristas.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
+    "services_baristas = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../calendar/baristas.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
     "services_baristas['mois'] = pd.to_datetime(services_baristas['mois'])\n",
     "if dt.is_notebook():\n",
     "    print(services_baristas.head())"
