--- a/notebook/recettes.ipynb
+++ b/notebook/recettes.ipynb
@@ -8,12 +8,13 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
     "from datetime import datetime\n",
     "import mydashtools as dt\n",
     "import plotly.express as px\n",
     "pd.options.plotting.backend = \"plotly\"\n",
     "\n",
-    "zelty = pd.read_csv(\"../zelty/zelty.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
+    "zelty = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../zelty/zelty.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
     "zelty['date'] = pd.to_datetime(zelty['date'])\n",
     "if dt.is_notebook():\n",
     "    print(zelty.head())"
@@ -45,7 +46,7 @@
     "del chiffredaffaire_par_an['']\n",
     "\n",
     "fig = px.bar(chiffredaffaire_par_an)\n",
-    "dt.fig_save_or_show(fig, 'chiffresdaffaire_01_ca_par_categories_et_an')"
+    "dt.fig_save_or_show(fig, 'recettes_01_ca_par_categories_et_an')"
    ]
   },
   {
@@ -60,7 +61,7 @@
     "chiffredaffaire_12_mois.columns = chiffredaffaire_12_mois.columns.droplevel(0)\n",
     "\n",
     "fig = px.bar(chiffredaffaire_12_mois)\n",
-    "dt.fig_save_or_show(fig, 'chiffresdaffaire_02_ca_par_categories_12_mois')"
+    "dt.fig_save_or_show(fig, 'recettes_02_ca_par_categories_12_mois')"
    ]
   },
   {
@@ -87,7 +88,7 @@
     "del chiffredaffaire_total_by_year['price']\n",
     "\n",
     "fig = px.bar(chiffredaffaire_total_by_year)\n",
-    "dt.fig_save_or_show(fig, 'chiffresdaffaire_03_ca_total_par_an')"
+    "dt.fig_save_or_show(fig, 'recettes_03_ca_total_par_an')"
    ]
   },
   {
@@ -116,7 +117,7 @@
    "outputs": [],
    "source": [
     "fig = px.bar(chiffredaffaire_year['total'])\n",
-    "dt.fig_save_or_show(fig, 'chiffresdaffaire_04_ca_quotidien_12_mois')"
+    "dt.fig_save_or_show(fig, 'recettes_04_ca_quotidien_12_mois')"
    ]
   },
   {
@@ -130,7 +131,7 @@
     "chiffredaffaire_top_year.index = chiffredaffaire_top_year.index.strftime('%d/%m/%Y')\n",
     "\n",
     "fig = px.bar(chiffredaffaire_top_year.head(50))\n",
-    "dt.fig_save_or_show(fig, 'chiffresdaffaire_05_ca_quotidien_top50_12_mois')"
+    "dt.fig_save_or_show(fig, 'recettes_05_ca_quotidien_top50_12_mois')"
    ]
   },
   {
@@ -188,7 +189,7 @@
     "benefices.columns = benefices.columns.droplevel(0)\n",
     "\n",
     "fig = px.bar(benefices)\n",
-    "dt.fig_save_or_show(fig, 'chiffresdaffaire_06_benefice')"
+    "dt.fig_save_or_show(fig, 'recettes_06_benefice')"
    ]
   },
   {
