interface web + évènements

--- a/notebook/adhesions.ipynb
+++ b/notebook/adhesions.ipynb
@@ -13,6 +13,8 @@
     "import mydashtools as dt\n",
     "import plotly.express as px\n",
     "pd.options.plotting.backend = \"plotly\"\n",
+    "if dt.is_notebook():\n",
+    "    __file__ = \"notebook/\"\n",
     "\n",
     "zelty = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../zelty/zelty.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
     "zelty['date'] = pd.to_datetime(zelty['date'])\n",
@@ -42,6 +44,7 @@
     "adhésions_last_month = adhésions_last_month.resample('D').sum().rename(columns={'price': 'nb'})\n",
     "\n",
     "fig = px.bar(adhésions_last_month)\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'adhesions_01_adhesion_des_derniers_jours')"
    ]
   },
@@ -72,6 +75,7 @@
     "adhésions_by_month.columns = adhésions_by_month.columns.droplevel(0)\n",
     "\n",
     "fig = px.bar(adhésions_by_month)\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'adhesions_02_adhesion_par_mois')"
    ]
   },
@@ -101,14 +105,20 @@
     "del adhésions_a_date['a_date']\n",
     "adhésions_a_date = adhésions_a_date.resample('Y').sum().rename(columns={'price': 'nb'})\n",
     "adhésions_a_date.index = adhésions_a_date.index.year\n",
-    "libelle_a_date = \"à date du %02d/%02d\" % (datetime.now().day, datetime.now().month)\n",
+    "libelle_a_date = \"À date du %02d/%02d\" % (datetime.now().day, datetime.now().month)\n",
     "adhésions_by_year[libelle_a_date] = adhésions_a_date['nb']\n",
     "#adhésions_by_year.histogram()\n",
     "adhésions_by_year.fillna(0, inplace=True)\n",
-    "adhésions_by_year['toute l\\'année'] = adhésions_by_year['nb'] - adhésions_by_year[libelle_a_date]\n",
+    "adhésions_by_year['toute l\\'année'] = adhésions_by_year['nb']# - adhésions_by_year[libelle_a_date]\n",
     "del adhésions_by_year['nb']\n",
+    "del adhésions_by_year['toute l\\'année'][max(adhésions_by_year.index)]\n",
     "\n",
-    "fig = px.bar(adhésions_by_year)\n",
+    "import plotly.graph_objects as go\n",
+    "fig = go.Figure(data=[\n",
+    "    go.Bar(name=libelle_a_date, x=adhésions_by_year.index, y=adhésions_by_year[libelle_a_date]),\n",
+    "    go.Bar(name='Toute l\\'année', x=adhésions_by_year.index, y=adhésions_by_year['toute l\\'année'])\n",
+    "])\n",
+    "# Change the bar mode\n",
     "dt.fig_save_or_show(fig, 'adhesions_03_adhesion_par_an')"
    ]
   },
