--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -13,6 +13,8 @@
     "import mydashtools as dt\n",
     "import plotly.express as px\n",
     "pd.options.plotting.backend = \"plotly\"\n",
+    "if dt.is_notebook():\n",
+    "    __file__ = \"notebook/\"\n",
     "\n",
     "services_baristas = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../calendar/baristas.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
     "services_baristas['mois'] = pd.to_datetime(services_baristas['mois'])\n",
@@ -33,6 +35,7 @@
     "creneaux_annules.columns = creneaux_annules.columns.droplevel(0)\n",
     "\n",
     "fig = px.bar(creneaux_annules)\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'barista_01_creneaux_annules')"
    ]
   },
@@ -59,6 +62,7 @@
    "outputs": [],
    "source": [
     "fig = px.bar(nb_baristas[['nb baristas']].stack('year').groupby('year').sum())\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'barista_02_nb_baristas_par_an')"
    ]
   },
@@ -70,6 +74,7 @@
    "outputs": [],
    "source": [
     "fig = px.bar(nb_baristas[['nb services réalisés']].stack('year').groupby('year').sum())\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'barista_03_nb_services_realises_par_an')"
    ]
   },
@@ -81,6 +86,7 @@
    "outputs": [],
    "source": [
     "fig = px.bar(nb_baristas['nb baristas'])\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'barista_04_nb_baristas_par_mois')"
    ]
   },
@@ -92,6 +98,7 @@
    "outputs": [],
    "source": [
     "fig = px.bar(nb_baristas['nb services réalisés'])\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'barista_05_nb_services_réalisés_par_mois')"
    ]
   },
@@ -118,6 +125,7 @@
    "outputs": [],
    "source": [
     "fig = px.bar(services['count'])\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'barista_06_nb_referents_par_mois')"
    ]
   },
@@ -129,6 +137,7 @@
    "outputs": [],
    "source": [
     "fig = px.bar(services['sum'])\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'barista_07_nb_services_ouverts')"
    ]
   },
@@ -148,6 +157,8 @@
     "baristas = baristas.reset_index()[['nom', 'nb']].groupby('nom')[['nb']].sum().sort_values(by='nb', ascending=False)\n",
     "\n",
     "fig = px.bar(baristas)\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
+    "fig.update_xaxes(showticklabels=False)\n",
     "dt.fig_save_or_show(fig, 'barista_08_nb_services_par_baristas_12_mois')"
    ]
   },
@@ -187,6 +198,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "74e1112e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "baristas_par_semaine = services_baristas[services_baristas['mois'] > limit_date][services_baristas['role'] != \"CRENEAU ANNULE\"]\n",
+    "baristas_par_semaine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d60fa272",
    "metadata": {},
    "outputs": [],
    "source": []
