--- a/notebook/recettes.ipynb
+++ b/notebook/recettes.ipynb
@@ -13,6 +13,8 @@
     "import mydashtools as dt\n",
     "import plotly.express as px\n",
     "pd.options.plotting.backend = \"plotly\"\n",
+    "if dt.is_notebook():\n",
+    "    __file__ = \"notebook/\"\n",
     "\n",
     "zelty = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../zelty/zelty.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
     "zelty['date'] = pd.to_datetime(zelty['date'])\n",
@@ -46,6 +48,7 @@
     "del chiffredaffaire_par_an['']\n",
     "\n",
     "fig = px.bar(chiffredaffaire_par_an)\n",
+    "fig.update_layout(legend_title=\"Type de produit\",xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'recettes_01_ca_par_categories_et_an')"
    ]
   },
@@ -56,12 +59,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chiffredaffaire_12_mois = chiffredaffaire.resample('MS').sum()\n",
-    "chiffredaffaire_12_mois = chiffredaffaire_12_mois[chiffredaffaire_12_mois.index > str(datetime.now().replace(year=datetime.now().year - 1))]\n",
+    "chiffredaffaire_12_mois = zelty[zelty.date > str(datetime.now().replace(year=datetime.now().year - 1))]\n",
+    "chiffredaffaire_12_mois = chiffredaffaire_12_mois.groupby(['date', 'produit'])[['price']].sum().unstack('produit').resample('MS').sum()\n",
     "chiffredaffaire_12_mois.columns = chiffredaffaire_12_mois.columns.droplevel(0)\n",
     "\n",
-    "fig = px.bar(chiffredaffaire_12_mois)\n",
-    "dt.fig_save_or_show(fig, 'recettes_02_ca_par_categories_12_mois')"
+    "fig = px.bar(chiffredaffaire_12_mois.dropna())\n",
+    "fig.update_layout(legend_title=\"Produit\",xaxis_title=None,yaxis_title=None)\n",
+    "dt.fig_save_or_show(fig, 'recettes_02_ca_par_produits_12_mois')"
    ]
   },
   {
@@ -84,10 +88,16 @@
     "libelle_a_date = \"à date du %02d/%02d\" % (datetime.now().day, datetime.now().month)\n",
     "chiffredaffaire_total_by_year[libelle_a_date] = chiffredaffaire_a_date['price']\n",
     "chiffredaffaire_total_by_year.fillna(0, inplace=True)\n",
-    "chiffredaffaire_total_by_year['toute l\\'année'] = chiffredaffaire_total_by_year['price'] - chiffredaffaire_total_by_year[libelle_a_date]\n",
+    "chiffredaffaire_total_by_year['toute l\\'année'] = chiffredaffaire_total_by_year['price']\n",
     "del chiffredaffaire_total_by_year['price']\n",
+    "del chiffredaffaire_total_by_year['toute l\\'année'][max(chiffredaffaire_total_by_year.index)]\n",
     "\n",
-    "fig = px.bar(chiffredaffaire_total_by_year)\n",
+    "\n",
+    "import plotly.graph_objects as go\n",
+    "fig = go.Figure(data=[\n",
+    "    go.Bar(name=libelle_a_date, x=chiffredaffaire_total_by_year.index, y=chiffredaffaire_total_by_year[libelle_a_date]),\n",
+    "    go.Bar(name='Toute l\\'année', x=chiffredaffaire_total_by_year.index, y=chiffredaffaire_total_by_year['toute l\\'année'])\n",
+    "])\n",
     "dt.fig_save_or_show(fig, 'recettes_03_ca_total_par_an')"
    ]
   },
@@ -131,7 +141,8 @@
     "chiffredaffaire_top_year.index = chiffredaffaire_top_year.index.strftime('%d/%m/%Y')\n",
     "\n",
     "fig = px.bar(chiffredaffaire_top_year.head(50))\n",
-    "dt.fig_save_or_show(fig, 'recettes_05_ca_quotidien_top50_12_mois')"
+    "fig.update_layout(legend_title=\"Type de produit\",xaxis_title=None,yaxis_title=None)\n",
+    "dt.fig_save_or_show(fig, 'recette_05_ca_quotidien_top50_12_mois')"
    ]
   },
   {
@@ -189,6 +200,7 @@
     "benefices.columns = benefices.columns.droplevel(0)\n",
     "\n",
     "fig = px.bar(benefices)\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'recettes_06_benefice')"
    ]
   },
@@ -207,6 +219,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "761a11fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c82b88c",
    "metadata": {},
    "outputs": [],
    "source": []
