Réorganisation du Makefile plus noms plus normés

--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "fig = px.bar(creneaux_annules)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'barista_01_creneaux_annules')"
+    "dt.fig_save_or_show(fig, 'baristas_01_creneaux_annules')"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "source": [
     "fig = px.bar(nb_baristas[['nb baristas']].stack('year').groupby('year').sum())\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'barista_02_nb_baristas_par_an')"
+    "dt.fig_save_or_show(fig, 'baristas_02_nb_baristas_par_an')"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "source": [
     "fig = px.bar(nb_baristas[['nb services réalisés']].stack('year').groupby('year').sum())\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'barista_03_nb_services_realises_par_an')"
+    "dt.fig_save_or_show(fig, 'baristas_03_nb_services_realises_par_an')"
    ]
   },
   {
@@ -87,7 +87,7 @@
    "source": [
     "fig = px.bar(nb_baristas['nb baristas'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'barista_04_nb_baristas_par_mois')"
+    "dt.fig_save_or_show(fig, 'baristas_04_nb_baristas_par_mois')"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "source": [
     "fig = px.bar(nb_baristas['nb services réalisés'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'barista_05_nb_services_réalisés_par_mois')"
+    "dt.fig_save_or_show(fig, 'baristas_05_nb_services_réalisés_par_mois')"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "source": [
     "fig = px.bar(services['count'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'barista_06_nb_referents_par_mois')"
+    "dt.fig_save_or_show(fig, 'baristas_06_nb_referents_par_mois')"
    ]
   },
   {
@@ -138,7 +138,7 @@
    "source": [
     "fig = px.bar(services['sum'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'barista_07_nb_services_ouverts')"
+    "dt.fig_save_or_show(fig, 'baristas_07_nb_services_ouverts')"
    ]
   },
   {
@@ -159,7 +159,7 @@
     "fig = px.bar(baristas)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "fig.update_xaxes(showticklabels=False)\n",
-    "dt.fig_save_or_show(fig, 'barista_08_nb_services_par_baristas_12_mois')"
+    "dt.fig_save_or_show(fig, 'baristas_08_nb_services_par_baristas_12_mois')"
    ]
   },
   {
@@ -188,8 +188,8 @@
     "    'nb_baristas': len(baristas.dropna().reset_index()['nom'].unique()),\n",
     "    'moyenne_du_nb_de_services': baristas['nb'].mean()\n",
     "}\n",
-    "barista_std = baristas.reset_index()\n",
-    "res['ecart_type_du_nb_de_services'] = barista_std[barista_std.index == len(barista_std)/2].reset_index()['nb'][0]\n",
+    "baristas_std = baristas.reset_index()\n",
+    "res['ecart_type_du_nb_de_services'] = baristas_std[baristas_std.index == len(baristas_std)/2].reset_index()['nb'][0]\n",
     "if dt.is_notebook():\n",
     "    print(res)"
    ]
