Top des recettes sans les catégories

--- a/notebook/recettes.ipynb
+++ b/notebook/recettes.ipynb
@@ -137,12 +137,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del chiffredaffaire_top_year['total']\n",
+    "#del chiffredaffaire_top_year['total']\n",
     "chiffredaffaire_top_year.index = chiffredaffaire_top_year.index.strftime('%d/%m/%Y')\n",
     "\n",
-    "fig = px.bar(chiffredaffaire_top_year.head(50))\n",
-    "fig.update_layout(legend_title=\"Type de produit\",xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'recette_05_ca_quotidien_top50_12_mois')"
+    "fig = px.bar(chiffredaffaire_top_year[['total']].head(50))\n",
+    "#fig.update_layout(legend_title=\"Type de produit\",xaxis_title=None,yaxis_title=None)\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
+    "dt.fig_save_or_show(fig, 'recettes_05_ca_quotidien_top50_12_mois')"
    ]
   },
   {
