Ajout de la date/heure du créneau dans les données baristas + adaptation du notebook

--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -17,7 +17,8 @@
     "    __file__ = \"notebook/\"\n",
     "\n",
     "services_baristas = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../calendar/baristas.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
-    "services_baristas['mois'] = pd.to_datetime(services_baristas['mois'])\n",
+    "services_baristas['mois'] = pd.to_datetime(services_baristas['date'].apply(lambda x: x[0:7]+'-01'))\n",
+    "services_baristas['date'] = pd.to_datetime(services_baristas['date'])\n",
     "if dt.is_notebook():\n",
     "    print(services_baristas.head())"
    ]
@@ -46,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_baristas = services_baristas[services_baristas['role'] != \"CRENEAU ANNULE\"].groupby(['mois','nom','telephone']).count().rename(columns= {'role': 'nb'})\n",
+    "nb_baristas = services_baristas[services_baristas['role'] != \"CRENEAU ANNULE\"].groupby(['mois','nom','telephone'])[['role']].count().rename(columns= {'role': 'nb'})\n",
     "nb_baristas = nb_baristas.groupby('mois').aggregate(func=['count', 'sum'])\n",
     "nb_baristas.columns = nb_baristas.columns.droplevel(0)\n",
     "nb_baristas = nb_baristas.rename(columns={'count': 'nb baristas', 'sum': 'nb services réalisés'})\n",
@@ -109,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "services = services_baristas[services_baristas['role'] == \"REFERENT\"].groupby(['mois','nom','telephone']).count().rename(columns= {'role': 'nb'})\n",
+    "services = services_baristas[services_baristas['role'] == \"REFERENT\"].groupby(['mois','nom','telephone'])[['role']].count().rename(columns= {'role': 'nb'})\n",
     "services = services.groupby('mois').aggregate(func=['count', 'sum'])\n",
     "services.columns = services.columns.droplevel(0)\n",
     "services['year'] = services.index.year\n",
@@ -136,7 +137,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.bar(services['sum'])\n",
+    "nb_services = services_baristas[services_baristas['role'] != \"CRENEAU ANNULE\"][['mois', 'date', 'role']].groupby(['mois', 'date']).count().rename(columns={'role': 'nb'}).reset_index()[['mois', 'date']].groupby('mois').count()\n",
+    "nb_services['year'] = nb_services.index.year\n",
+    "nb_services = nb_services.reset_index().set_index(['mois', 'year']).unstack('year').fillna(0)\n",
+    "nb_services.columns = nb_services.columns.droplevel(0)\n",
+    "nb_services\n",
+    "\n",
+    "fig = px.bar(nb_services)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'baristas_07_nb_services_ouverts')"
    ]
@@ -189,7 +196,7 @@
     "    'moyenne_du_nb_de_services': baristas['nb'].mean()\n",
     "}\n",
     "baristas_std = baristas.reset_index()\n",
-    "res['ecart_type_du_nb_de_services'] = baristas_std[baristas_std.index == len(baristas_std)/2].reset_index()['nb'][0]\n",
+    "res['ecart_type_du_nb_de_services'] = baristas_std[baristas_std.index == int(len(baristas_std)/2)].reset_index()['nb'][0]\n",
     "if dt.is_notebook():\n",
     "    print(res)"
    ]
@@ -198,17 +205,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "74e1112e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "baristas_par_semaine = services_baristas[services_baristas['mois'] > limit_date][services_baristas['role'] != \"CRENEAU ANNULE\"]\n",
-    "baristas_par_semaine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d60fa272",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -230,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
