--- a/notebook/recettes.ipynb
+++ b/notebook/recettes.ipynb
@@ -55,12 +55,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c98c558c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pid2produit = zelty.groupby(['pid'])['produit'].last().to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a103e628",
    "metadata": {},
    "outputs": [],
    "source": [
     "chiffredaffaire_12_mois = zelty[zelty.date > str(datetime.now().replace(year=datetime.now().year - 1))]\n",
-    "chiffredaffaire_12_mois = chiffredaffaire_12_mois.groupby(['date', 'produit'])[['price']].sum().unstack('produit').resample('MS').sum()\n",
+    "chiffredaffaire_12_mois = chiffredaffaire_12_mois.groupby(['date', 'pid'])[['price']].sum().reset_index()\n",
+    "chiffredaffaire_12_mois['produit'] = chiffredaffaire_12_mois['pid'].map(pid2produit)\n",
+    "chiffredaffaire_12_mois = chiffredaffaire_12_mois.reset_index().set_index(['date', 'produit'])[['price']]\n",
+    "chiffredaffaire_12_mois = chiffredaffaire_12_mois.unstack('produit')\n",
+    "chiffredaffaire_12_mois = chiffredaffaire_12_mois.resample('MS').sum()\n",
     "chiffredaffaire_12_mois.columns = chiffredaffaire_12_mois.columns.droplevel(0)\n",
     "\n",
     "fig = px.bar(chiffredaffaire_12_mois.dropna())\n",
@@ -249,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
